exports[`test an add more licenses button should be shown when no more licenses are available 1`] = `
<li
  className="caAtBd">
  <span
    className="fXreAk">
    <span
      className="ipTaeZ">
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <span
    className="iyDwOW">
    <span
      className="kyRcdL">
      Subscription name
    </span>
    <span
      className="fdTSGx">
      <span>
        20/20 used
      </span>
    </span>
    <button
      className="hCeSSC"
      onClick={[Function]}>
      <span>
        Get additional subscriptions
      </span>
    </button>
  </span>
  <div>
    <noscript />
  </div>
  <span
    className="kZrKRI">
    <a
      className="eRLPss"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;

exports[`test the sitesubscription matches the snapshot 1`] = `
<li
  className="caAtBd">
  <span
    className="fXreAk">
    <span
      className="ipTaeZ">
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <span
    className="iyDwOW">
    <span
      className="kyRcdL">
      Subscription name
    </span>
    <span
      className="fdTSGx">
      <span>
        14/20 used
      </span>
    </span>
  </span>
  <div>
    <noscript />
  </div>
  <span
    className="kZrKRI">
    <a
      className="eRLPss"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;
